--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "tastaturberuf/contao-eloquent-bundle",
     "type": "contao-bundle",
+    "license": "MIT",
     "authors": [
         {
             "name": "Daniel Jahnsmüller",
