--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "contao/core-bundle": "4.8.*",
-        "illuminate/database": "^6.0"
+        "illuminate/database": "5 - 6"
     },
     "autoload": {
         "psr-4": {
