--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "contao/core-bundle": "4.8.*",
+        "contao/core-bundle": "^4.8",
         "illuminate/database": "5 - 6"
     },
     "autoload": {
