--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
         }
     ],
     "require": {
-        "contao/core-bundle": "^4.8",
-        "illuminate/database": "5 - 6"
+        "contao/core-bundle": "^4.9",
+        "illuminate/database": "^6.0"
     },
     "autoload": {
         "psr-4": {
